# upload-to-cloud

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/upload-to-cloud/: index.ts  task.oo.yaml
